Fix assay names that are too long

--- a/src/assets/style/navigation-drawers/assay-item.css.less
+++ b/src/assets/style/navigation-drawers/assay-item.css.less
@@ -12,12 +12,11 @@
   background-color: #F6F6F6;
 }
 
-.assay-item > .assay-name {
-  margin-left: 8px;
-  flex: 1;
+.assay-item .assay-name {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: block;
 }
 
 .assay-item--selected {
